# encoder-decoder-slm

./: .gitattributes  README.md  pyproject.toml
artifacts/data/: train.jsonl  val.jsonl
artifacts/models/: model.pt
artifacts/models/mu_vision/: config.json  special_tokens_map.json  tokenizer_config.json
src/mu/: checkpoint.py  distributed.py  generate_text+image2text.py  generate_text2text.py  log.py  tokenizer.py  train.py  train_text2text_by_kd.py
src/mu/evaluate/: generate.py  loss.py
src/mu/models/: modeling_mu.py  mu_utils.py
src/mu/mu_vision/: conversation.py  mm_utils.py  utils.py
src/mu/mu_vision/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
src/mu/mu_vision/model/language_model/: helpers.py  llava_mu.py  modeling_mu.py  tokenizer_mu.py
src/mu/mu_vision/model/language_model/mu_v2/: modeling_mu.py  mu_utils.py  optim.py
src/mu/mu_vision/model/multimodal_encoder/: clip_encoder.py  modeling_clip.py
src/mu/mu_vision/model/multimodal_resampler/: builder.py
tests/test_mu/: test_train_text2text_by_kd.py  torchrun.py
